Minor Refactor and gitignore update

--- a/simclr/.gitignore
+++ b/simclr/.gitignore
@@ -2,7 +2,9 @@
 physionet.org
 
 # Training Logs
-simclr-500ex
+simclr-500ex/
+simclr-100ex/
+simclr-ecg-eval-transfereval-250ex/
 
 # Cache
 __pycache__/
