--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -32,7 +32,7 @@ jobs:
         uses: psf/black@stable
         with:
           options: "--check --verbose"
-          version: "21.12b0"
+          version: "22.1.0"
 
       - name: Lint with flake8
         run: |
